Change to unqualified repo name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: 948074422901.dkr.ecr.us-east-1.amazonaws.com/aegl_poc_xmas
+        ECR_REPOSITORY: aegl_poc_xmas
         IMAGE_TAG: current
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
