--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: aegl_poc_xmas
         IMAGE_TAG: best
-        GIT_COMMIT: {{ env.GITHUB_SHA }}
+        GIT_COMMIT: ${{ env.GITHUB_SHA }}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg GIT_COMMIT=$GIT_COMMIT .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
