--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: aegl_poc_xmas
         IMAGE_TAG: best
-        GIT_COMMIT: ${LAST_COMMIT_SHA}
+        GIT_COMMIT: ${{ env.LAST_COMMIT_SHA }}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg GIT_COMMIT=$GIT_COMMIT .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
